# uniflow

./: .clang-format  .gitignore  CMakeLists.txt  DESIGN.md  EXAMPLES.en.md  EXAMPLES.kr.md  EXAMPLES.md  LICENSE  PYTHON_PORT.md  README.en.md  README.kr.md  README.md  TUTORIAL.en.md  TUTORIAL.kr.md  TUTORIAL.md  demo_concept.md  uniflow.hpp  uniflow.py
.claude/: settings.json
.github/workflows/: ci.yml
cpp/: EXAMPLES.kr.md  EXAMPLES.md  TUTORIAL.kr.md  TUTORIAL.md  uniflow.hpp  uniflow.sln
cs/: uniflow.cs  uniflow.sln
cs/examples/: AnsiConsole.cs
docs/: DESIGN.md  _config.yml  index.md
docs/videos/: README.md
examples/city_traffic/: README.en.md  README.md  app.h  globals.cpp  uf_traffic_light.cpp  uf_traffic_light.h  uf_vehicle.cpp  uf_visualization.cpp  uf_visualization.h  world.cpp
examples/cnc_pickers/: README.en.md  README.md  app.h  cnc_pickers.sln  cnc_pickers.vcxproj  cnc_pickers.vcxproj.filters  env_log_observer.cpp  env_log_observer.h  globals.cpp  globals.h  load_picker.cpp  load_picker.h  main.cpp  orchestrator.cpp  orchestrator.h  picker_motion.h  snapshot.h  stage.cpp  stage.h  uf_load_picker.cpp  uf_load_picker.h  uf_orchestrator.cpp  uf_orchestrator.h  uf_stage.cpp  uf_stage.h  uf_unload_picker.cpp  uf_unload_picker.h  uf_visualization.cpp  uf_visualization.h  uniflow.hpp  unload_picker.cpp  unload_picker.h  viz.cpp  viz.h
examples/demo/: main.cpp  order_module.cpp  session_module.h
examples/message_dispatch/: README.en.md  README.md  app.h  globals.cpp  globals.h  mailbox.cpp  mailbox.h  main.cpp  snapshot.cpp  (+3 more)
include/: uniflow.hpp
notes/: HANDOFF.md  make_concept.hpp
python/: PYTHON_PORT.kr.md  PYTHON_PORT.md  TUTORIAL.kr.md  TUTORIAL.md  uniflow.py
temp/: README.md
vs2022/: 01_minimal.vcxproj  02_async.vcxproj  04_producer_consumer.vcxproj  05_dining_philosophers.vcxproj  demo.vcxproj
(+194 files in other folders)
